--- a/shop/assets/manifest.json
+++ b/shop/assets/manifest.json
@@ -1,7 +1,7 @@
 {
     "name":"4B Shop",
     "short_name":"4B Shop",
-    "description":"SC Portfolio – Fotografía Barcelona",
+    "description":"4B Music Shop",
     "background_color":"#000000",
     "theme_color":"#229BC7",
     "orientation":"portrait",
