--- a/timesburg/go/manifest.json
+++ b/timesburg/go/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "4Bdev",
-  "short_name": "4Bdev",
-  "description": "4Bdev",
+  "name": "HT.js 4B®",
+  "short_name": "4Bdev®",
+  "description": "HorarioTimes.js by 4Bdev®",
   "lang": "es-ES",
   "start_url": "/",
   "display": "standalone",
