--- a/timesburg/go/manifest.json
+++ b/timesburg/go/manifest.json
@@ -3,7 +3,8 @@
   "short_name": "4Bdev®",
   "description": "HorarioTimes.js by 4Bdev®",
   "lang": "es-ES",
-  "start_url": "/timesburg/go",
+  "start_url": "/buildup/timesburg/go/",
+  "scope": "/buildup/timesburg/go/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
