--- a/timesburg/go/manifest.json
+++ b/timesburg/go/manifest.json
@@ -10,17 +10,17 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/assets/icons/128x128.png",
+      "src": "./assets/icons/128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "/assets/icons/144x144.png",
+      "src": "./assets/icons/144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/assets/icons/152x152.png",
+      "src": "./assets/icons/152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
@@ -30,12 +30,12 @@
       "type": "image/png"
     },
     {
-      "src": "/assets/icons/256x256.png",
+      "src": "./assets/icons/256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "/assets/icons/512x512.png",
+      "src": "./assets/icons/512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
